--- a/frontend/src/Components/Navbars/navbar.css
+++ b/frontend/src/Components/Navbars/navbar.css
@@ -112,7 +112,7 @@
   visibility: hidden; /* Bitno: sprječava klikanje dok je skriven */
 
   /* Tranzicija za sva svojstva */
-  transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s;
+  transition: opacity 0.7s ease-in-out, transform 0.7s ease-in-out, visibility 0.7s, background-color 0.7s ease-in-out;
 }
 
 /* --- STANJE KADA JE OTVOREN --- */
@@ -268,4 +268,8 @@
   .nav-center {
     display: none;
   }
+}
+
+h2{
+  padding-bottom: 1rem;
 }
